# AudioEngine

./: .gitignore  AGENTS.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioDecoder.cpp  AudioEngine.cpp  AudioVisualizer.cpp  CMakeLists.txt  audio_engine_jni.cpp
app/src/main/cpp/include/: AudioDecoder.h  AudioEngine.h  AudioFilter.h  AudioVisualizer.h  LockfreeBuffer.h  Util.h
app/src/main/java/com/example/audioengine/: AudioEngine.kt  AudioEngineApplication.kt  MainActivity.kt  ThumbnailRepository.kt  VisualizerGLSurfaceView.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
